--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <script src="/logic.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./logic.js" defer></script>
 </head>
 <body>
-    
+    <div class="top">
+        <img src="./images/book.png" width="60px" height="60px">
+        <h1>My Library</h1>
+    </div>
+    <div class="container">
+        <div class="container-content">
+            <div class="content-text">Looks so empty here. ¡Let's add some books!</div>
+        </div>
+        <dialog>
+            <h2>New Book</h2>
+            <form action="" id="main-form" method="dialog">
+                    <div class="form-group">
+                        <label for="title"> TITLE: </label>
+                        <input type="text" id="title" name="title" maxlength="25">
+                    </div>
+                    <div class="form-group">
+                        <label for="author"> AUTHOR: </label>
+                        <input type="text" id="author" name="author" maxlength="25">
+                    </div>
+                    <div class="form-group">
+                        <label for="pages"> PAGES: </label>
+                        <input type="number" id="pages" name="pages" maxlength="25">
+                    </div>
+            </form>
+            <button type="button" class="btn-cancel" form="main-form">Cancel</button>
+            <button type="submit" class="btn-submit" form="main-form">Create</button>
+        </dialog>
+        <div>
+            <button class="btn-book">Add Book</button>
+        </div>
+    </div>
+    <div class="bottom">
+        <img src="./images/github.png" width="50px" height="50px">
+        <span>Made by lpmunoz99</span>
+    </div>
 </body>
 </html>
